<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentAndGroup">

    <EditText
        android:id="@+id/edSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edSecondName"
        app:layout_constraintStart_toStartOf="@+id/edSecondName"
        app:layout_constraintTop_toBottomOf="@+id/edSecondName" />

    <EditText
        android:id="@+id/edPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edStudentTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_ticket"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edPatronymic"
        app:layout_constraintStart_toStartOf="@+id/edPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/edPatronymic" />

    <EditText
        android:id="@+id/edGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edStudentTicket"
        app:layout_constraintStart_toStartOf="@+id/edStudentTicket"
        app:layout_constraintTop_toBottomOf="@+id/edStudentTicket" />

    <EditText
        android:id="@+id/edGroupID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/group_id"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edNameGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddStudent" />

    <EditText
        android:id="@+id/edNameGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edNumberOfStudents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edGroupID" />

    <EditText
        android:id="@+id/edNumberOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_of_students"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edFaculty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNameGroup" />

    <EditText
        android:id="@+id/edFaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/faculty"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edTrainingProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNumberOfStudents" />

    <EditText
        android:id="@+id/edTrainingProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/training_profile"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edGroupLeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFaculty" />

    <EditText
        android:id="@+id/edGroupLeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_leader"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTrainingProfile" />

    <Button
        android:id="@+id/btnAddGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_group"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edGroupLeader"
        app:layout_constraintStart_toStartOf="@+id/edGroupLeader"
        app:layout_constraintTop_toBottomOf="@+id/edGroupLeader" />

    <Button
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edGroup"
        app:layout_constraintStart_toStartOf="@+id/edGroup"
        app:layout_constraintTop_toBottomOf="@+id/edGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>